[tool.poetry]
name = "dfa"
readme="README.md"
version = "4.3.0"
description = "Python library for modeling DFAs, Moore Machines, and Transition Systems."
authors = ["Marcell Vazquez-Chanlatte <marcell.vc@eecs.berkeley.edu>"]
repository = "https://github.com/mvcisback/dfa"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
attrs = "^21.0.0"
funcy = "^1.12"
lazytree = "^0.3.1"
pydot = {version = "^1.4", optional = true}
pytest-xdist = "^2.1.0"
bidict = "^0.21.4"

[tool.poetry.dev-dependencies]
hypothesis = "^6.0.0"
parsimonious = "^0.8.1"
pydot = "^1.4"
pytest = "^6.0.0"
pytest-flake8 = "^1.0"
pytest-sugar = "^0.9.2"
pdoc3 = "^0.9.1"

[tool.poetry.extras]
draw = ["pydot"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
