[tool.poetry]
name = "dfa"
readme="README.md"
version = "4.7.1"
description = "Python library for modeling DFAs, Moore Machines, and Transition Systems."
authors = ["Marcell Vazquez-Chanlatte <marcell.vc@eecs.berkeley.edu>"]
repository = "https://github.com/mvcisback/dfa"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
attrs = ">=22"
funcy = ">=1,<3"
pydot = {version = ">=1.4", optional = true}
bidict = ">=0.22"
bitarray = "^2.4.0"

[tool.poetry.dev-dependencies]
pydot = "^1.4"
pytest = "^7.2"
dill = "^0.3.5"
hypothesis = "^6.56.4"

[tool.poetry.extras]
draw = ["pydot"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
